etc/iptables/rules.v4
# Generated by iptables-save v1.6.0 on Mon Jun 26 06:12:42 2017
*filter
:INPUT DROP [1:52]
:FORWARD DROP [0:0]
:OUTPUT DROP [2:112]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 44555 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --dport 27960 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --dport 123 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 204.152.204.100/32 -i eth0 -p udp -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m tcp --sport 44555 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0 -p udp -m udp --sport 27960 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0 -p udp -m udp --sport 123 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A OUTPUT -d 204.152.204.100/32 -o eth0 -p udp -j ACCEPT
COMMIT
# Completed on Mon Jun 26 06:12:42 2017
